Prevent code blocks from breaking layout.
I like the behavior of pre-wrap, but I wish it broke words. As it is,
it allows lines wider than the page. Horizontal scrolling paired with
wrapped lines is weird, so that's why I went back to basic pre.

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -74,8 +74,9 @@ p {
 pre {
     border-left: thin solid #93a1a1;
     margin: 1.5em 0;
+    overflow: auto;
     padding-left: 1.5em;
-    white-space: pre-wrap;
+    white-space: pre;
 }
 strong {
     font-weight: bold;
